--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openplotter-i2c (4.2.2-stable) bookworm; urgency=medium
+
+  * Add BMP581
+
+ -- John Eisenhower <eisenhowerj@gmail.com>  Thu, 13 Jun 2024 19:13:29 +0200
+
 openplotter-i2c (4.2.0-stable) bookworm; urgency=medium
 
   * stable
